--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 
 <html>
   <head>
-    Why are you the best?
+    Anna's Delightful Dessert Recipes
   </head>
   <body>
-    <main>
-      
-    </main>
+    <img src="bakery.web">
+    <ul>
+      <li>
+        <a href="cookies.html">Cookies</a>
+        <a href="blueberrymuffins.html">Blueberry Muffins</a>
+        <a href="lemonbar.html">Lemon Bars</a>
+        <a href="lemoncheesecake.html">Lemon Cheesecake</a>
+        <a href="cinnamonroll.html">Cinnamon Roll</a>
+      </li>
+    </ul>
   </body>
 </html>
