--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     Anna's Delightful Dessert Recipes
   </head>
   <body>
-    <img src="bakery.web">
+    <img src="bakery.webp">
     <ul>
       <li>
         <a href="cookies.html">Cookies</a>
