--- a/cinnamonroll.html
+++ b/cinnamonroll.html
@@ -3,7 +3,7 @@
 <html>
   <body>
     <head>
-      Cinnamon Rolls
+      Cinnamon Buns (makes 9)
     </head>
     <img src="images/bakery.png>
     <p> description </p>
