--- a/cookies.html
+++ b/cookies.html
@@ -3,33 +3,42 @@
 <html>
   <body>
     <head>
-      Cinnamon Rolls
+      Chocolate Chip Cookies (makes 24)
     </head>
     <img src="images/bakery.png>
     <p> description </p>
     <h2>Ingredients</h2>
-    <h3>thing 1</h3>
+    <h3>Dry</h3>
       <ul>
         <li>
-          <p>1<p>
-          <p>2<p>
-          <p>3<p>
+          <p>3 cups (360 g) flour<p>
+          <p>1 tsps (5 g) baking soda <p>
+          <p>2 tsp salt<p>
         </li>
       </ul>
-      <h3>thing 1</h3>
+      <h3>Wet</h3>
       <ul>
         <li>
-          <p>1<p>
-          <p>2<p>
-          <p>3<p>
+          <p>2 (1 brown:190g, 0.8 white:160g) cup sugar<p>
+          <p>2 stick browned/melted butter<p>
+          <p>2 egg<p>
+          <p>2 tsp vanilla<p>
+          <p>16 oz combined chocolate and toffee (if not toffee, use all chocolate)<p>
         </li>
       </ul>
     <h2>Directions</h2>
+      <p>do first: brown butter</p>
       <ol>
         <li>
-          <p>1<p>
-          <p>2<p>
-          <p>3<p>
+          <p>whisk 2 (1 brown:190g, 0.8 white:160g) cup sugar, 2 tsp salt, and 2 stick browned butter<p>
+          <p>whisk in 2 egg and 2 tsp vanilla<p>
+          <p>sift in 3 cups flour (360g) and 1 tsps (5g) baking soda, but not fully incorporated 
+<p>
+          <p>fold in 16 oz chocolate and toffee, or just chocolate 
+<p>
+          <p>rest for 36 hours in fridge (optiional, enhances flavor)<p>
+          <p>bake at 350 for 12-15 min or 7 at 425 for a more goey cookie<p>
+          <p>note/tips: use dark chocolate, resting makes it taste so much better, and if you want to keep the batter scoop first then freeze. no need to defrost<p>
         </li>
       </ol>
   </body>
