--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    Anna's Delightful Dessert Recipes
+    <title>Anna's Delightful Dessert Recipes</title>
   </head>
   <body>
     <img src="bakery.webp">
