--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 
 <html>
   <head>
-    Anna's Delightful Dessert Recipes
+    <title>Anna's Delightful Dessert Recipes</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- import the webpage's stylesheet -->
+    <link rel="stylesheet" href="/style.css">
+    <!-- import the webpage's javascript file -->
+    <!--<script src="/script.js" defer></script> -->
   </head>
   <body>
     <img src="bakery.webp">
     <ul>
       <li>
-        <a href="cookies.html">Cookies</a>
+        <a href="cookies.html">Chocolate Chip Cookies</a>
         <a href="blueberrymuffins.html">Blueberry Muffins</a>
         <a href="lemonbar.html">Lemon Bars</a>
         <a href="lemoncheesecake.html">Lemon Cheesecake</a>
