--- a/cinnamonroll.html
+++ b/cinnamonroll.html
@@ -3,7 +3,11 @@
 <html>
   <body>
     <head>
-      Cinnamon Buns (makes 9)
+      <title>Cinnamon Buns (makes 9)</title>
+      <!-- import the webpage's stylesheet -->
+      <link rel="stylesheet" href="/style.css">
+      <!-- import the webpage's javascript file -->
+      <script src="/script.js" defer></script>
     </head>
     <img src="images/bakery.png>
     <p> description </p>
