--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <html>
   <head>
     <title>Anna's Delightful Dessert Recipes</title>
+    <!-- import the webpage's stylesheet -->
+     <link rel="stylesheet" href="/style.css">
+    <!-- import the webpage's javascript file -->
+    <script src="/script.js" defer></script>
   </head>
   <body>
     <img src="bakery.webp">
