--- a/lemonbar.html
+++ b/lemonbar.html
@@ -3,7 +3,11 @@
 <html>
   <body>
     <head>
-      Lemon Bars
+      <title>Lemon Bars</title>
+      <!-- import the webpage's stylesheet -->
+      <link rel="stylesheet" href="/style.css">
+      <!-- import the webpage's javascript file -->
+      <script src="/script.js" defer></script>
     </head>
     <img src="images/bakery.png>
     <p> bright and zingy lemon bars with a crisp shortbread crust and luscious lemon filling, practically sunshine in the form of a dessert, and always a treat for Christmas day</p>
