--- a/blueberrymuffin.html
+++ b/blueberrymuffin.html
@@ -3,7 +3,11 @@
 <html>
   <body>
     <head>
-      Blueberry Muffins
+      <title>Blueberry Muffins</title>
+      <!-- import the webpage's stylesheet -->
+      <link rel="stylesheet" href="/style.css">
+      <!-- import the webpage's javascript file -->
+      <script src="/script.js" defer></script>
     </head>
     <img src="images/bakery.png>
     <p> sweet, fruity, and moist, these muffins are sure to impress your grandma. for extra points, top with a crumbly, buttery streusel layer! delightful, but simple! </p>
