--- a/cookies.html
+++ b/cookies.html
@@ -3,7 +3,11 @@
 <html>
   <body>
     <head>
-      Chocolate Chip Cookies (makes 24)
+      <title>Chocolate Chip Cookies (makes 24)</title>
+      <!-- import the webpage's stylesheet -->
+      <link rel="stylesheet" href="/style.css">
+      <!-- import the webpage's javascript file -->
+      <script src="/script.js" defer></script>
     </head>
     <img src="images/bakery.png>
     <p> description </p>
