--- a/lemoncheesecake.html
+++ b/lemoncheesecake.html
@@ -3,7 +3,11 @@
 <html>
   <body>
     <head>
-      Lemon Cheesecake
+      <title>Lemon Cheesecake</title>
+      <!-- import the webpage's stylesheet -->
+      <link rel="stylesheet" href="/style.css">
+      <!-- import the webpage's javascript file -->
+      <script src="/script.js" defer></script>
     </head>
     <img src="images/bakery.png>
     <p> description </p>
