--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <head>
     <title>Anna's Delightful Dessert Recipes</title>
     <!-- import the webpage's stylesheet -->
-     <link rel="stylesheet" href="/style.css">
+     <link rel="stylesheet" href="./style.css">
     <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
+    <script src="./script.js" defer></script>
   </head>
   <body>
     <img src="bakery.webp">
