--- a/blueberrymuffin.html
+++ b/blueberrymuffin.html
@@ -5,7 +5,7 @@
     <head>
       <title>Blueberry Muffins</title>
       <!-- import the webpage's stylesheet -->
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="./style.css">
       <!-- import the webpage's javascript file -->
       <script src="/script.js" defer></script>
     </head>
