--- a/cinnamonroll.html
+++ b/cinnamonroll.html
@@ -5,9 +5,9 @@
     <head>
       <title>Cinnamon Buns (makes 9)</title>
       <!-- import the webpage's stylesheet -->
-      <link rel="stylesheet" href="/style.css">
+      <link rel="stylesheet" href="./style.css">
       <!-- import the webpage's javascript file -->
-      <script src="/script.js" defer></script>
+      <script src="./script.js" defer></script>
     </head>
     <img src="images/bakery.png>
     <p> description </p>
