--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
-    <img src="bakery.webp">
+    <img src="bakery.png">
     <ul>
       <li>
         <a href="cookies.html">Cookies</a>
