--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul>
       <li>
         <a href="cookies.html">Cookies</a>
-        <a href="blueberrymuffins.html">Blueberry Muffins</a>
+        <a href="blueberrymuffin.html">Blueberry Muffins</a>
         <a href="lemonbar.html">Lemon Bars</a>
         <a href="lemoncheesecake.html">Lemon Cheesecake</a>
         <a href="cinnamonroll.html">Cinnamon Roll</a>
