--- a/cookies.html
+++ b/cookies.html
@@ -9,7 +9,7 @@
       <!-- import the webpage's javascript file -->
       <script src="./script.js" defer></script>
     </head>
-    <img src="images/bakery.png>
+    <img src="images/bakery.png">
     <p> description </p>
     <h2>Ingredients</h2>
     <h3>Dry</h3>
