--- a/blueberrymuffin.html
+++ b/blueberrymuffin.html
@@ -9,7 +9,7 @@
       <!-- import the webpage's javascript file -->
       <script src="/script.js" defer></script>
     </head>
-    <img src="images/bakery.png>
+    <img src="bakery.png">
     <p> sweet, fruity, and moist, these muffins are sure to impress your grandma. for extra points, top with a crumbly, buttery streusel layer! delightful, but simple! </p>
     <h2>Ingredients</h2>
     <h3>Muffins</h3>
