--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
+    <h1>Welcome to anna's delightful dessert recipes >_< </h1>
+    <p>i'm anna and i like to bake to desserts! these recipes are a compilation of my favorite recipes i've created by tweaking others' recipes and adding my own spin. explore each recipe and have fun baking!</p>
     <img src="bakery.png">
     <ul>
       <li>
-        <a href="cookies.html">Cookies</a>
-        <a href="blueberrymuffin.html">Blueberry Muffins</a>
-        <a href="lemonbar.html">Lemon Bars</a>
-        <a href="lemoncheesecake.html">Lemon Cheesecake</a>
-        <a href="cinnamonroll.html">Cinnamon Roll</a>
+        <a href="cookies.html">cookies</a>
+        <a href="blueberrymuffin.html">blueberry muffins</a>
+        <a href="lemonbar.html">lemon bars</a>
+        <a href="lemoncheesecake.html">lemon cheesecake</a>
+        <a href="cinnamonroll.html">cinnamon roll</a>
       </li>
     </ul>
   </body>
