--- a/cinnamonroll.html
+++ b/cinnamonroll.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 
 <html>
-  <body>
-    <head>
-      <title>Cinnamon Buns (makes 9)</title>
+  <head>
+    <title>Cinnamon Buns (makes 9)</title>
       <!-- import the webpage's stylesheet -->
-      <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css">
       <!-- import the webpage's javascript file -->
-      <script src="./script.js" defer></script>
-    </head>
+    <script src="./script.js" defer></script>
+  </head>
+  <body>
+    <h1>cinnamon buns (makes 9)</h1>
     <img src="bakery.png">
     <p> description </p>
     <h2>Ingredients</h2>
