--- a/cookies.html
+++ b/cookies.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 
 <html>
-  <body>
-    <head>
-      <title>Chocolate Chip Cookies (makes 24)</title>
+  <head>
+    <title>Chocolate Chip Cookies (makes 24)</title>
       <!-- import the webpage's stylesheet -->
-      <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css">
       <!-- import the webpage's javascript file -->
-      <script src="./script.js" defer></script>
-    </head>
-    <img src="images/bakery.png">
+    <script src="./script.js" defer></script>
+  </head>
+  <body>
+    <h1>chocolate chip cookies (makes 24)</h1>
+    <img src="bakery.png">
     <p> description </p>
     <h2>Ingredients</h2>
     <h3>Dry</h3>
