--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
-    <h1>Welcome to anna's delightful dessert recipes >_< </h1>
-    <p>i'm anna and i like to bake to desserts! these recipes are a compilation of my favorite recipes i've created by tweaking others' recipes and adding my own spin. explore each recipe and have fun baking!</p>
+    <h1>welcome to anna's delightful dessert recipes &>_<; </h1>
+    <p>i'm anna and i like to bake to desserts!</p>
+    <p>
+      these recipes are a compilation of my favorite recipes i've created by 
+      tweaking others' recipes and adding my own spin. explore each recipe and have fun baking! :3 </p>
     <img src="bakery.png">
     <ul>
       <li>
