--- a/lemonbar.html
+++ b/lemonbar.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 
 <html>
-  <body>
-    <head>
-      <title>Lemon Bars</title>
+  <head>
+    <title>Lemon Bars</title>
       <!-- import the webpage's stylesheet -->
-      <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css">
       <!-- import the webpage's javascript file -->
-      <script src="./script.js" defer></script>
-    </head>
-    <img src="images/bakery.png>
+    <script src="./script.js" defer></script>
+  </head>
+  <body>
+    <h1>lemon bars</h1>
+    <img src="bakery.png">
     <p> bright and zingy lemon bars with a crisp shortbread crust and luscious lemon filling, practically sunshine in the form of a dessert, and always a treat for Christmas day</p>
     <h2>Ingredients</h2>
     <h3>Shortbread Crust</h3>
