--- a/lemoncheesecake.html
+++ b/lemoncheesecake.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 
 <html>
-  <body>
-    <head>
-      <title>Lemon Cheesecake</title>
-      <!-- import the webpage's stylesheet -->
-      <link rel="stylesheet" href="./style.css">
+  <head>
+    <title>Lemon Cheesecake</title>
+    <!-- import the webpage's stylesheet -->
+    <link rel="stylesheet" href="./style.css">
       <!-- import the webpage's javascript file -->
-      <script src="./script.js" defer></script>
-    </head>
-    <img src="images/bakery.png>
+    <script src="./script.js" defer></script>
+  </head>
+  <body>
+    <h1>lemon cheesecake</h1>
+    <img src="bakery.png">
     <p> description </p>
     <h2>Ingredients</h2>
     <h3>thing 1</h3>
