--- a/lemoncheesecake.html
+++ b/lemoncheesecake.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>lemon cheesecake</h1>
-    <img src="bakery.png">
+    <img src="lemon_cheesecake.png">
     <p> description </p>
     <h2>Ingredients</h2>
     <h3>thing 1</h3>
