--- a/lemonbar.html
+++ b/lemonbar.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>lemon bars</h1>
-    <img src="bakery.png">
+    <img src="lemon_bars.png">
     <p> bright and zingy lemon bars with a crisp shortbread crust and luscious lemon filling, practically sunshine in the form of a dessert, and always a treat for Christmas day</p>
     <h2>Ingredients</h2>
     <h3>Shortbread Crust</h3>
