--- a/cookies.html
+++ b/cookies.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>chocolate chip cookies (makes 24)</h1>
-    <img src="bakery.png">
+    <img src="cookies.png">
     <p> description </p>
     <h2>Ingredients</h2>
     <h3>Dry</h3>
