--- a/cinnamonroll.html
+++ b/cinnamonroll.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>cinnamon buns (makes 9)</h1>
-    <img src="bakery.png">
+    <img src="cinnamon_rolls.png">
     <p> description </p>
     <h2>Ingredients</h2>
     <h3>Bread Dough</h3>
