--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
-    <h1>welcome to anna's delightful dessert recipes &>_<; </h1>
+    <h1>welcome to anna's delightful dessert recipes >_< </h1>
     <p>i'm anna and i like to bake to desserts!</p>
     <p>
       these recipes are a compilation of my favorite recipes i've created by 
