--- a/cookies.html
+++ b/cookies.html
@@ -46,5 +46,14 @@
           <p>note/tips: use dark chocolate, resting makes it taste so much better, and if you want to keep the batter scoop first then freeze. no need to defrost<p>
         </li>
       </ol>
+    <ul>
+      <li>
+        <a href="cookies.html">cookies</a>
+        <a href="blueberrymuffin.html">blueberry muffins</a>
+        <a href="lemonbar.html">lemon bars</a>
+        <a href="lemoncheesecake.html">lemon cheesecake</a>
+        <a href="cinnamonroll.html">cinnamon roll</a>
+      </li>
+    </ul>
   </body>
 </html>
