--- a/cinnamonroll.html
+++ b/cinnamonroll.html
@@ -57,5 +57,14 @@
           <p>let cool for 5-10 minutes and enjoy!<p>
         </li>
       </ol>
+    <ul>
+      <li>
+        <a href="cookies.html">cookies</a>
+        <a href="blueberrymuffin.html">blueberry muffins</a>
+        <a href="lemonbar.html">lemon bars</a>
+        <a href="lemoncheesecake.html">lemon cheesecake</a>
+        <a href="cinnamonroll.html">cinnamon roll</a>
+      </li>
+    </ul>
   </body>
 </html>
