--- a/blueberrymuffin.html
+++ b/blueberrymuffin.html
@@ -69,5 +69,14 @@ then add blueberries and add to muffin tin.
 </p>
         </li>
       </ol>
+    <ul>
+      <li>
+        <a href="cookies.html">cookies</a>
+        <a href="blueberrymuffin.html">blueberry muffins</a>
+        <a href="lemonbar.html">lemon bars</a>
+        <a href="lemoncheesecake.html">lemon cheesecake</a>
+        <a href="cinnamonroll.html">cinnamon roll</a>
+      </li>
+    </ul>
   </body>
 </html>
