--- a/blueberrymuffin.html
+++ b/blueberrymuffin.html
@@ -9,6 +9,7 @@
     <script src="/script.js" defer></script>
   </head>
   <body>
+    <h1>blueberry muffins</h1>
     <img src="blueberry_muffins.png">
     <p> sweet, fruity, and moist, these muffins are sure to impress your grandma. for extra points, top with a crumbly, buttery streusel layer! delightful, but simple! </p>
     <h2>Ingredients</h2>
