--- a/cookies.html
+++ b/cookies.html
@@ -9,7 +9,7 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
-    <h1>chocolate chip cookies (makes 24)</h1>
+    <h1>chocolate chip cookies</h1>
     <img src="cookies.png">
     <p> description </p>
     <h2>Ingredients</h2>
