--- a/cinnamonroll.html
+++ b/cinnamonroll.html
@@ -9,7 +9,7 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
-    <h1>cinnamon buns (makes 9)</h1>
+    <h1>cinnamon buns</h1>
     <img src="cinnamon_rolls.png">
     <p> description </p>
     <h2>Ingredients</h2>
