--- a/blueberrymuffin.html
+++ b/blueberrymuffin.html
@@ -72,6 +72,7 @@ then add blueberries and add to muffin tin.
       </ol>
     <ul>
       <li>
+        <a href="index.html">home</a>
         <a href="cookies.html">cookies</a>
         <a href="blueberrymuffin.html">blueberry muffins</a>
         <a href="lemonbar.html">lemon bars</a>
