--- a/cinnamonroll.html
+++ b/cinnamonroll.html
@@ -59,6 +59,7 @@
       </ol>
     <ul>
       <li>
+        <a href="index.html">home</a>
         <a href="cookies.html">cookies</a>
         <a href="blueberrymuffin.html">blueberry muffins</a>
         <a href="lemonbar.html">lemon bars</a>
