--- a/blueberrymuffin.html
+++ b/blueberrymuffin.html
@@ -11,7 +11,7 @@
   <body>
     <h1>blueberry muffins</h1>
     <img src="blueberry_muffins.png">
-    <p> sweet, fruity, and moist, these muffins are sure to impress your grandma. for extra points, top with a crumbly, buttery streusel layer! delightful, but simple! </p>
+    <p class= "description" > sweet, fruity, and moist, these muffins are sure to impress your grandma. for extra points, top with a crumbly, buttery streusel layer! delightful, but simple! </p>
     <h2>Ingredients</h2>
     <h3>Muffins</h3>
       <ul>
