--- a/cinnamonroll.html
+++ b/cinnamonroll.html
@@ -11,7 +11,7 @@
   <body>
     <h1>cinnamon buns</h1>
     <img src="cinnamon_rolls.png">
-    <p> description </p>
+    <p class= "description"> description </p>
     <h2>Ingredients</h2>
     <h3>Bread Dough</h3>
       <ul>
