--- a/cookies.html
+++ b/cookies.html
@@ -11,7 +11,7 @@
   <body>
     <h1>chocolate chip cookies</h1>
     <img src="cookies.png">
-    <p> description </p>
+    <p class= "description"> description </p>
     <h2>Ingredients</h2>
     <h3>Dry</h3>
       <ul>
@@ -48,6 +48,7 @@
       </ol>
     <ul>
       <li>
+        <a href="index.html">home</a>
         <a href="cookies.html">cookies</a>
         <a href="blueberrymuffin.html">blueberry muffins</a>
         <a href="lemonbar.html">lemon bars</a>
