--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
   </head>
   <body>
     <h1>welcome to anna's delightful dessert recipes >_< </h1>
-    <p>i'm anna and i like to bake to desserts!</p>
-    <p>
+    <p class ="description" >i'm anna and i like to bake to desserts!</p>
+    <p class="description">
       these recipes are a compilation of my favorite recipes i've created by 
       tweaking others' recipes and adding my own spin. explore each recipe and have fun baking! :3 </p>
     <img src="bakery.png">
     <ul>
       <li>
+        <a href="index.html">home</a>
         <a href="cookies.html">cookies</a>
         <a href="blueberrymuffin.html">blueberry muffins</a>
         <a href="lemonbar.html">lemon bars</a>
