--- a/lemonbar.html
+++ b/lemonbar.html
@@ -11,7 +11,7 @@
   <body>
     <h1>lemon bars</h1>
     <img src="lemon_bars.png">
-    <p> bright and zingy lemon bars with a crisp shortbread crust and luscious lemon filling, practically sunshine in the form of a dessert, and always a treat for Christmas day</p>
+    <p class="description"> bright and zingy lemon bars with a crisp shortbread crust and luscious lemon filling, practically sunshine in the form of a dessert, and always a treat for Christmas day</p>
     <h2>Ingredients</h2>
     <h3>Shortbread Crust</h3>
       <ul>
@@ -55,6 +55,7 @@
       </ol>
     <ul>
       <li>
+        <a href="index.html">home</a>
         <a href="cookies.html">cookies</a>
         <a href="blueberrymuffin.html">blueberry muffins</a>
         <a href="lemonbar.html">lemon bars</a>
