--- a/lemoncheesecake.html
+++ b/lemoncheesecake.html
@@ -11,7 +11,9 @@
   <body>
     <h1>lemon cheesecake</h1>
     <img src="lemon_cheesecake.png">
-    <p> description </p>
+    <p class="description"> creamiest, dreamiest cheesecake flavored with fresh lemon, 
+      nestled between a buttery graham cracker crust and a layer of homemade lemon curd. 
+      top with clouds of fluffy whipped cream and sunny lemon slices!  </p>
     <h2>Ingredients</h2>
     <h3>Crust</h3>
       <ul>
@@ -54,6 +56,7 @@
       </ol>
     <ul>
       <li>
+        <a href="index.html">home</a>
         <a href="cookies.html">cookies</a>
         <a href="blueberrymuffin.html">blueberry muffins</a>
         <a href="lemonbar.html">lemon bars</a>
