--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p class="description">
       these recipes are a compilation of my favorite recipes i've created by 
       tweaking others' recipes and adding my own spin. explore each recipe and have fun baking! :3 </p>
-    <img src="bakery.png">
+    <img id= "bakeryimg" src="bakery.png">
     <ul>
       <li>
         <a href="index.html">home</a>
