--- a/index.html
+++ b/index.html
@@ -14,7 +14,22 @@
     <p class="description">
       these recipes are a compilation of my favorite recipes i've created by 
       tweaking others' recipes and adding my own spin. explore each recipe and have fun baking! :3 </p>
-    <img id= "bakeryimg" src="bakery.png">
+    <div class ="ingredients"> 
+      <h2>about me</h2>
+      <img id= "bakeryimg" src="bakery.png">
+      <p>
+        Hi hi! I’m Anna Burns, a 17 year old girl from Texas. I’m a senior at a public high school in 
+        Houston. I’ve picked up some coding skills from taking classes/ self teaching, and I just think it’s pretty fun! 
+        In my spare time I like to read, write, draw, and watch numerous youtube videos on random things I might or might not ever use. 
+        One of my biggest goals/dreams in life is creating something that would positively impact people, 
+        like contributing to a medical invention. This website will serve as my portfolio for things I’ve made/ am making in all realms 
+        and want to share to the world! 
+
+      </p>
+      <p>
+        Since you’ve stumbled here dear traveller, stay a while. It’s warm here, protected from the harsh winds of cyberattacks out there. Have a cup of tea and explore! 
+      </p>
+    </div>
     <ul>
       <li>
         <a href="index.html">home</a>
