--- a/blueberrymuffin.html
+++ b/blueberrymuffin.html
@@ -13,63 +13,67 @@
     <img src="blueberry_muffins.png">
     <p class= "description" > sweet, fruity, and moist, these muffins are sure to impress your grandma. for extra points, top with a crumbly, buttery streusel layer! delightful, but simple! </p>
     <h2>Ingredients</h2>
-    <h3>Muffins</h3>
-      <ul>
-        <li>
-          <p>2.5 cups (300 g) flour<p>
-          <p>1 tsp salt<p>
-          <p>2 tsp baking powder<p>
-          <p>7 ounces blueberries</p>
-          <p>.25 cups (56 g) melted butter<p>
-          <p>.25 cups oil (60 ml)<p>
-          <p>1 cup whole milk (240 ml)- room temp<p>
-          <p>.75 cup sugar (170 g)</p>
-          <p>2.5 cups (300 g) flour<p>
-          <p>.25 cup sour cream (60 ml)- room temp<p>
-          <p>2 tsp vanilla extract<p>
-          <p>2 eggs- room temp</p>
-          <p>.25 cup lemon juice (60 ml)<p>
-          <p>zest of one lemon</p>
-        </li>
-      </ul>
-      <h3>Streusel Topping</h3>
-      <ul>
-        <li>
-          <p>1 tbsp unsalted butter, cold <p>
-          <p>2 tbsp flour<p>
-          <p>3 tbsps brown sugar<p>
-          <p>1 tsp cinnamon<p>
-          <p>pinch of salt<p>
-        </li>
-      </ul>
-    <h2>Directions</h2>
-      <p> preheat to 400 F </p>
-      <ol>
-        <li>
-          <p>whisk 2.5 cups (300 g) flour, 1 tsp salt, 2 tsp baking powder 
-<p>
-          <p>toss 7 ounces blueberries in some dry mixture 
-<p>
-          <p>different bowl- .25 cups (56 g) melted butter, 
-.25 cups oil (60 ml), 
-1 cup whole milk (240 ml)- room temp,
-.75 cup sugar (170 g),
-.25 cup sour cream (60 ml)- room temp,
-2 tsp vanilla extract </p>
-<p>2 eggs- room temp
-(whisk eggs before adding for extra fluffiness) 
-</p>
-      <p>Then add in .25 cup lemon juice (60 ml) 
-and the zest of one lemon to finish the batter.
-</p>
-      <p>Whisk, then pour wet into dry until almost combined. dont overmix
-then add blueberries and add to muffin tin.
-      </p>
-      <p>add ramekin with water to keep muffins moist (optional) and cover with streusel topping (optional)</p>
-      <p>bake for 20-25 min 
-</p>
+    <div class="ingredients">
+      <h3>Muffins</h3>
+        <ul>
+          <li>
+            <p>2.5 cups (300 g) flour<p>
+            <p>1 tsp salt<p>
+            <p>2 tsp baking powder<p>
+            <p>7 ounces blueberries</p>
+            <p>.25 cups (56 g) melted butter<p>
+            <p>.25 cups oil (60 ml)<p>
+            <p>1 cup whole milk (240 ml)- room temp<p>
+            <p>.75 cup sugar (170 g)</p>
+            <p>2.5 cups (300 g) flour<p>
+            <p>.25 cup sour cream (60 ml)- room temp<p>
+            <p>2 tsp vanilla extract<p>
+            <p>2 eggs- room temp</p>
+            <p>.25 cup lemon juice (60 ml)<p>
+            <p>zest of one lemon</p>
+          </li>
+        </ul>
+        <h3>Streusel Topping</h3>
+        <ul>
+          <li>
+            <p>1 tbsp unsalted butter, cold <p>
+            <p>2 tbsp flour<p>
+            <p>3 tbsps brown sugar<p>
+            <p>1 tsp cinnamon<p>
+            <p>pinch of salt<p>
+          </li>
+        </ul>
+    </div>
+    <div class= "directions">
+      <h2>Directions</h2>
+        <p> preheat to 400 F </p>
+        <ol>
+          <li>
+            <p>whisk 2.5 cups (300 g) flour, 1 tsp salt, 2 tsp baking powder 
+  <p>
+            <p>toss 7 ounces blueberries in some dry mixture 
+  <p>
+            <p>different bowl- .25 cups (56 g) melted butter, 
+  .25 cups oil (60 ml), 
+  1 cup whole milk (240 ml)- room temp,
+  .75 cup sugar (170 g),
+  .25 cup sour cream (60 ml)- room temp,
+  2 tsp vanilla extract </p>
+  <p>2 eggs- room temp
+  (whisk eggs before adding for extra fluffiness) 
+  </p>
+        <p>Then add in .25 cup lemon juice (60 ml) 
+  and the zest of one lemon to finish the batter.
+  </p>
+        <p>Whisk, then pour wet into dry until almost combined. dont overmix
+  then add blueberries and add to muffin tin.
+        </p>
+        <p>add ramekin with water to keep muffins moist (optional) and cover with streusel topping (optional)</p>
+        <p>bake for 20-25 min 
+  </p>
         </li>
       </ol>
+    </div>
     <ul>
       <li>
         <a href="index.html">home</a>
