--- a/blueberrymuffin.html
+++ b/blueberrymuffin.html
@@ -74,7 +74,7 @@
         </li>
       </ol>
     </div>
-    <ul>
+    <ul class= "navbar">
       <li>
         <a href="index.html">home</a>
         <a href="cookies.html">cookies</a>
