--- a/cinnamonroll.html
+++ b/cinnamonroll.html
@@ -57,7 +57,7 @@
           <p>let cool for 5-10 minutes and enjoy!<p>
         </li>
       </ol>
-    <ul>
+    <ul class="navbar">
       <li>
         <a href="index.html">home</a>
         <a href="cookies.html">cookies</a>
