--- a/cookies.html
+++ b/cookies.html
@@ -46,7 +46,7 @@
           <p>note/tips: use dark chocolate, resting makes it taste so much better, and if you want to keep the batter scoop first then freeze. no need to defrost<p>
         </li>
       </ol>
-    <ul>
+    <ul class= "navbar">
       <li>
         <a href="index.html">home</a>
         <a href="cookies.html">cookies</a>
