--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         Since you’ve stumbled here dear traveller, stay a while. It’s warm here, protected from the harsh winds of cyberattacks out there. Have a cup of tea and explore! 
       </p>
     </div>
-    <ul>
+    <ul class="navbar">
       <li>
         <a href="index.html">home</a>
         <a href="cookies.html">cookies</a>
