--- a/lemonbar.html
+++ b/lemonbar.html
@@ -53,7 +53,7 @@
           <p>things to note: DO NOT overbake, this will lead to curdling and you’ll have to start over again. the cooling is very important to the lemon bars setting. use fresh lemon juice for the best flavor</p>
         </li>
       </ol>
-    <ul>
+    <ul class="navbar">
       <li>
         <a href="index.html">home</a>
         <a href="cookies.html">cookies</a>
