--- a/lemoncheesecake.html
+++ b/lemoncheesecake.html
@@ -54,7 +54,7 @@
           <p>cut into squares and serve! optionally, top with lemon curd and whipped cream for extra yum !</p>
         </li>
       </ol>
-    <ul>
+    <ul class="navbar">
       <li>
         <a href="index.html">home</a>
         <a href="cookies.html">cookies</a>
