--- a/blueberrymuffin.html
+++ b/blueberrymuffin.html
@@ -50,28 +50,27 @@
         <ol>
           <li>
             <p>whisk 2.5 cups (300 g) flour, 1 tsp salt, 2 tsp baking powder 
-  <p>
-            <p>toss 7 ounces blueberries in some dry mixture 
-  <p>
-            <p>different bowl- .25 cups (56 g) melted butter, 
+  <p></li>
+            <li><p>toss 7 ounces blueberries in some dry mixture 
+  <p></li>
+            <li><p>different bowl- .25 cups (56 g) melted butter, 
   .25 cups oil (60 ml), 
   1 cup whole milk (240 ml)- room temp,
   .75 cup sugar (170 g),
   .25 cup sour cream (60 ml)- room temp,
-  2 tsp vanilla extract </p>
-  <p>2 eggs- room temp
+  2 tsp vanilla extract </p></li>
+  <li><p>2 eggs- room temp
   (whisk eggs before adding for extra fluffiness) 
-  </p>
-        <p>Then add in .25 cup lemon juice (60 ml) 
+  </p></li>
+        <li><p>Then add in .25 cup lemon juice (60 ml) 
   and the zest of one lemon to finish the batter.
-  </p>
-        <p>Whisk, then pour wet into dry until almost combined. dont overmix
+  </p></li>
+        <li><p>Whisk, then pour wet into dry until almost combined. dont overmix
   then add blueberries and add to muffin tin.
-        </p>
-        <p>add ramekin with water to keep muffins moist (optional) and cover with streusel topping (optional)</p>
-        <p>bake for 20-25 min 
-  </p>
-        </li>
+        </p></li>
+        <li><<p>add ramekin with water to keep muffins moist (optional) and cover with streusel topping (optional)</p></li>
+        <li><p>bake for 20-25 min 
+  </p></li>
       </ol>
     </div>
     <ul class= "navbar">
