--- a/cinnamonroll.html
+++ b/cinnamonroll.html
@@ -12,51 +12,48 @@
     <h1>cinnamon buns</h1>
     <img src="cinnamon_rolls.png">
     <p class= "description"> description </p>
-    <h2>Ingredients</h2>
-    <h3>Bread Dough</h3>
-      <ul>
-        <li>
-          <p>180 grams milk<p>
-          <p>2 egg<p>
-          <p>50 g sugar<p>
-          <p>1/2 a stick butter, melted<p>
-          <p>540 g all purpose flour<p>
-          <p>1 tsp salt<p>
-          <p>7 g instant yeast<p>
-        </li>
-      </ul>
-      <h3>Cinnamon Filling</h3>
-      <ul>
-        <li>
-          <p>half a stick softened butter<p>
-          <p>1 cup dark brown sugar<p>
-          <p>2 tbsps cinnamon<p>
-        </li>
-      </ul>
-    <h2>Directions</h2>
-      <p>do first: take out butter to soften, melt butter, take out milk</p>
-      <ol>
-        <li>
-          <p>mix 180 grams milk, 2 egg , 50 grams sugar, half a stick melted butter
-<p>
-          <p>separate mix 1 tsp salt, 7 grams instant yeast, 540 grams flour 
-<p>
-          <p>combine flour into wet ingredients 
-<p>
-          <p>knead dough for 8-10 minutes until smooth 
-<p>
-          <p>cover allow to rise on counter for 1 hour / doubled
-<p>
-          <p>roll to rectangle 14x9, then spread half a stick softened butter on<p>
-          <p>combine 1 cup dark brown sugar & 2 tbsps cinnamon<p>
-          <p>sprinkle mixture over buttered dough and rub<p>
-          <p>roll up dough tightly (ends will have less cinnamon)<p>
-          <p>cut into 1 inch & place in a baking pan // note: use floss to cut for cleaner edges, or a serrated knife</p>
-          <p>cover and let rise for 45 min<p>
-          <p>bake at 350 for 25 minutes<p>
-          <p>let cool for 5-10 minutes and enjoy!<p>
-        </li>
-      </ol>
+    <div class="ingredients">
+      <h2>Ingredients</h2>
+      <h3>Bread Dough</h3>
+        <ul>
+          <li>
+            <p>180 grams milk<p>
+            <p>2 egg<p>
+            <p>50 g sugar<p>
+            <p>1/2 a stick butter, melted<p>
+            <p>540 g all purpose flour<p>
+            <p>1 tsp salt<p>
+            <p>7 g instant yeast<p>
+          </li>
+        </ul>
+        <h3>Cinnamon Filling</h3>
+        <ul>
+          <li>
+            <p>half a stick softened butter<p>
+            <p>1 cup dark brown sugar<p>
+            <p>2 tbsps cinnamon<p>
+          </li>
+        </ul>
+    </div>
+    <div class="directions">
+      <h2>Directions</h2>
+        <p>do first: take out butter to soften, melt butter, take out milk</p>
+        <ol>
+            <li><p>mix 180 grams milk, 2 egg , 50 grams sugar, half a stick melted butter</p></li>
+            <li><p>separate mix 1 tsp salt, 7 grams instant yeast, 540 grams flour </p></li>
+            <li><p>combine flour into wet ingredients </p></li>
+            <li><p>knead dough for 8-10 minutes until smooth </p></li>
+            <li><p>cover allow to rise on counter for 1 hour / doubled</p></li>
+            <li><p>roll to rectangle 14x9, then spread half a stick softened butter on</p></li>
+            <li><p>combine 1 cup dark brown sugar & 2 tbsps cinnamon</p></li>
+            <li><p>sprinkle mixture over buttered dough and rub</p></li>
+            <li><p>roll up dough tightly (ends will have less cinnamon)</p></li>
+            <li><p>cut into 1 inch & place in a baking pan // note: use floss to cut for cleaner edges, or a serrated knife</p></li>
+            <li><p>cover and let rise for 45 min<p></li>
+            <li><p>bake at 350 for 25 minutes</p></li>
+            <li><p>let cool for 5-10 minutes and enjoy!</p></li>
+        </ol>
+    </div>
     <ul class="navbar">
       <li>
         <a href="index.html">home</a>
