--- a/blueberrymuffin.html
+++ b/blueberrymuffin.html
@@ -10,8 +10,9 @@
   </head>
   <body>
     <h1>blueberry muffins</h1>
-    <img src="blueberry_muffins.png">
+    <img src="assets/blueberry_muffins.png">
     <p class= "description" > sweet, fruity, and moist, these muffins are sure to impress your grandma. for extra points, top with a crumbly, buttery streusel layer! delightful, but simple! </p>
+    
     <div class="ingredients">
       <h2>Ingredients</h2>
       <h3>Muffins</h3>
@@ -44,6 +45,7 @@
           </li>
         </ul>
     </div>
+
     <div class= "directions">
       <h2>Directions</h2>
         <p> preheat to 400 F </p>
@@ -73,6 +75,7 @@
   </p></li>
       </ol>
     </div>
+
     <ul class= "navbar">
       <li>
         <a href="index.html">home</a>
