--- a/cinnamonroll.html
+++ b/cinnamonroll.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>cinnamon buns</h1>
-    <img src="cinnamon_rolls.png">
+    <img src="assets/cinnamon_rolls.png">
     <p class= "description"> description </p>
     <div class="ingredients">
       <h2>Ingredients</h2>
