--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       tweaking others' recipes and adding my own spin. explore each recipe and have fun baking! :3 </p>
     <div class ="ingredients"> 
       <h2>about me</h2>
-      <img id= "bakeryimg" src="bakery.png">
+      <img id= "bakeryimg" src="assets/bakery.png">
       <p>
         Hi hi! I’m Anna Burns, a 17 year old girl from Texas. I’m a senior at a public high school in 
         Houston. I’ve picked up some coding skills from taking classes/ self teaching, and I just think it’s pretty fun! 
