--- a/lemoncheesecake.html
+++ b/lemoncheesecake.html
@@ -10,50 +10,56 @@
   </head>
   <body>
     <h1>lemon cheesecake</h1>
-    <img src="lemon_cheesecake.png">
+    <img src="assets/lemon_cheesecake.png">
     <p class="description"> creamiest, dreamiest cheesecake flavored with fresh lemon, 
       nestled between a buttery graham cracker crust and a layer of homemade lemon curd. 
       top with clouds of fluffy whipped cream and sunny lemon slices!  </p>
-    <h2>Ingredients</h2>
-    <h3>Crust</h3>
-      <ul>
-        <li>
-          <p>3/4 cups graham cracker crumbs<p>
-          <p>1/4 cup almond flour<p>
-          <p>3/2 tbps sugar<p>
-          <p>3 tbsps melted butter</p>
-        </li>
-      </ul>
-      <h3>Filling</h3>
-      <ul>
-        <li>
-          <p>16 ounce cream cheese<p>
-          <p>1/2 cup white sugar<p>
-          <p>zest of 2 lemons<p>
-          <p>2 eggs</p>
-          <p>1 tsp vanilla</p>
-          <p>1/8 cup or 29 g lemon juice</p>
-          <p>1/6 cup or 40 g heavy cream</p>
-          <p>optional: lemon curd & whipped cream for topping</p>
-        </li>
-      </ul>
-    <h2>Directions</h2>
-      <ol>
-        <li>
-          <p>do first: preheat oven to 350 F, melt butter, pulse lemon and sugar <p>
-          <p>to mke crust, combine 3/4 cups graham cracker crumbs, 1/2 cups almond flour, 3/2 tbps sugar, 3 tbsps butter <p>
-          <p>for the filling, beat 16 ounce cream cheese, 1/2 cups sugar, and zest of 2 lemons for around 2.5 min<p>
-          <p>add in 2 whole eggs, one at a time</p>
-          <p>once creamy, add 1 tsp vanilla, 1/8 cups or 29 g lemon juice, 1/6 cups or 40 g cups heavy cream and mix</p>
-          <p>pour filling into still warm crust</p>
-          <p>optional: use water bath to keep edges even</p>
-          <p>bake for 55-65 min, with the center still jiggly but edges set </p>
-          <p>turn off the oven and let rest for 1 hour, then transfer to cooling rack</p>
-          <p>transfer to cooling rack and let it cool completely</p>
-          <p>place in the fridge for 8 hrs (make sure to wrap it!)</p>
-          <p>cut into squares and serve! optionally, top with lemon curd and whipped cream for extra yum !</p>
-        </li>
-      </ol>
+
+    <div class = "ingredients">
+        <h2>Ingredients</h2>
+      <h3>Crust</h3>
+        <ul>
+          <li>
+            <p>3/4 cups graham cracker crumbs<p>
+            <p>1/4 cup almond flour<p>
+            <p>3/2 tbps sugar<p>
+            <p>3 tbsps melted butter</p>
+          </li>
+        </ul>
+        <h3>Filling</h3>
+        <ul>
+          <li>
+            <p>16 ounce cream cheese<p>
+            <p>1/2 cup white sugar<p>
+            <p>zest of 2 lemons<p>
+            <p>2 eggs</p>
+            <p>1 tsp vanilla</p>
+            <p>1/8 cup or 29 g lemon juice</p>
+            <p>1/6 cup or 40 g heavy cream</p>
+            <p>optional: lemon curd & whipped cream for topping</p>
+          </li>
+        </ul>
+    </div>
+
+    <div class = "directions">
+      <h2>Directions</h2>
+        <ol>
+          <li>
+            <p>do first: preheat oven to 350 F, melt butter, pulse lemon and sugar <p>
+            <p>to mke crust, combine 3/4 cups graham cracker crumbs, 1/2 cups almond flour, 3/2 tbps sugar, 3 tbsps butter <p>
+            <p>for the filling, beat 16 ounce cream cheese, 1/2 cups sugar, and zest of 2 lemons for around 2.5 min<p>
+            <p>add in 2 whole eggs, one at a time</p>
+            <p>once creamy, add 1 tsp vanilla, 1/8 cups or 29 g lemon juice, 1/6 cups or 40 g cups heavy cream and mix</p>
+            <p>pour filling into still warm crust</p>
+            <p>optional: use water bath to keep edges even</p>
+            <p>bake for 55-65 min, with the center still jiggly but edges set </p>
+            <p>turn off the oven and let rest for 1 hour, then transfer to cooling rack</p>
+            <p>transfer to cooling rack and let it cool completely</p>
+            <p>place in the fridge for 8 hrs (make sure to wrap it!)</p>
+            <p>cut into squares and serve! optionally, top with lemon curd and whipped cream for extra yum !</p>
+          </li>
+        </ol>
+    </div>
     <ul class="navbar">
       <li>
         <a href="index.html">home</a>
