--- a/lemoncheesecake.html
+++ b/lemoncheesecake.html
@@ -44,20 +44,18 @@
     <div class = "directions">
       <h2>Directions</h2>
         <ol>
-          <li>
-            <p>do first: preheat oven to 350 F, melt butter, pulse lemon and sugar <p>
-            <p>to mke crust, combine 3/4 cups graham cracker crumbs, 1/2 cups almond flour, 3/2 tbps sugar, 3 tbsps butter <p>
-            <p>for the filling, beat 16 ounce cream cheese, 1/2 cups sugar, and zest of 2 lemons for around 2.5 min<p>
-            <p>add in 2 whole eggs, one at a time</p>
-            <p>once creamy, add 1 tsp vanilla, 1/8 cups or 29 g lemon juice, 1/6 cups or 40 g cups heavy cream and mix</p>
-            <p>pour filling into still warm crust</p>
-            <p>optional: use water bath to keep edges even</p>
-            <p>bake for 55-65 min, with the center still jiggly but edges set </p>
-            <p>turn off the oven and let rest for 1 hour, then transfer to cooling rack</p>
-            <p>transfer to cooling rack and let it cool completely</p>
-            <p>place in the fridge for 8 hrs (make sure to wrap it!)</p>
-            <p>cut into squares and serve! optionally, top with lemon curd and whipped cream for extra yum !</p>
-          </li>
+          <li><p>do first: preheat oven to 350 F, melt butter, pulse lemon and sugar </p></li>
+          <li><p>to mke crust, combine 3/4 cups graham cracker crumbs, 1/2 cups almond flour, 3/2 tbps sugar, 3 tbsps butter </p></li>
+          <li><p>for the filling, beat 16 ounce cream cheese, 1/2 cups sugar, and zest of 2 lemons for around 2.5 min</p></li>
+          <li><p>add in 2 whole eggs, one at a time</p></li>
+          <li><p>once creamy, add 1 tsp vanilla, 1/8 cups or 29 g lemon juice, 1/6 cups or 40 g cups heavy cream and mix</p></li>
+          <li><p>pour filling into still warm crust</p></li>
+          <li><p>optional: use water bath to keep edges even</p></li>
+          <li><p>bake for 55-65 min, with the center still jiggly but edges set </p></li>
+          <li><p>turn off the oven and let rest for 1 hour, then transfer to cooling rack</p></li>
+          <li><p>transfer to cooling rack and let it cool completely</p></li>
+          <li><p>place in the fridge for 8 hrs (make sure to wrap it!)</p></li>
+          <li><p>cut into squares and serve! optionally, top with lemon curd and whipped cream for extra yum !</p></li>
         </ol>
     </div>
     <ul class="navbar">
