--- a/lemonbar.html
+++ b/lemonbar.html
@@ -42,21 +42,17 @@
       <h2>Directions</h2>
         <p>do first: melt butter! and zest lemons/ juice them, preheat to 350, line a 9x13 baking dish</p>
         <ol>
-          <li>
-            <p>whisk 2.5 cups flour (300g), 2/3 cups powdered sugar (83g), 1 tsp salt 
-  </p>
-            <p>pour in 12 tbsp butter and bake for 20-25 min
-  </p>
-        <p>make sure shortbread is cooled before adding filling</p>
-            <p>add sugar (3 cups) to food processor and zest of 3 lemons or just mix together 
-  </p>
-            <p>in another bowl: add sugar, .5 cups flour (60g), then 1 cup lemon juice (250 ml), 8 eggs 
-  </p>
-            <p>pour on cooled shortbread and bake 25 min, turning halfway</p>
-            <p>cool 1 hour then 2+ hours in the fridge to set (preferably overnight) </p>
-            <p>dust with powdered sugar to serve :)</p>
-            <p>things to note: DO NOT overbake, this will lead to curdling and you’ll have to start over again. the cooling is very important to the lemon bars setting. use fresh lemon juice for the best flavor</p>
-          </li>
+          <li><p>whisk 2.5 cups flour (300g), 2/3 cups powdered sugar (83g), 1 tsp salt</p></li>
+          <li><p>pour in 12 tbsp butter and bake for 20-25 min</p></li>
+          <li><p>make sure shortbread is cooled before adding filling</p></li>
+          <li><p>add sugar (3 cups) to food processor and zest of 3 lemons or just mix together </p></li>
+          <li><p>in another bowl: add sugar, .5 cups flour (60g), then 1 cup lemon juice (250 ml), 8 eggs</p></li>
+          <li><p>pour on cooled shortbread and bake 25 min, turning halfway</p></li>
+          <li><p>cool 1 hour then 2+ hours in the fridge to set (preferably overnight) </p></li>
+          <li><p>dust with powdered sugar to serve :D</p></li>
+          <li><p>things to note: DO NOT overbake, this will lead to curdling and you&apos;ll 
+              have to start over again. the cooling is very important to the lemon bars 
+              setting. use fresh lemon juice for the best flavor</p></li>
         </ol>
     </div>
 
